force-app/main/default/objects/AccountAreaSales__c/AccountAreaSales__c.object-meta.xml
<CustomObject>
    <description>[a02][AccountAreaSales__c] Contém informações sobre Áreas de Vendas.</description>
    <label>Cliente</label>
    <nameField>
        <displayFormat>MEX-{0000000}</displayFormat>
        <label>Área de Negócios</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clientes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>