force-app/main/default/objects/AccountAreaSales__c/fields/AccountAddressTxt__c.field-meta.xml
<CustomField>
    <fullName>AccountAddressTxt__c</fullName>
    <formula>AccountLkp__r.BillingStreet &amp; &quot; &quot; &amp; AccountLkp__r.BillingCity &amp; &quot; &quot; &amp; AccountLkp__r.BillingState &amp; &quot; &quot; &amp; AccountLkp__r.BillingPostalCode &amp; &quot; &quot; &amp; AccountLkp__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço</label>
    <type>Text</type>
</CustomField>