force-app/main/default/objects/AccountAreaSales__c/fields/AccountGroupFml__c.field-meta.xml
<CustomField>
    <fullName>AccountGroupFml__c</fullName>
    <description>Campo que concatena informação de grupo da conta para uso no PVC</description>
    <formula>IF(NOT(ISBLANK(AmancoGroupTxt__c)),
 TEXT(CodeSalesOrganizationTxt__c) &amp;  AmancoGroupTxt__c ,
IF(NOT(ISBLANK(PlastubosGroupTxt__c)),
 TEXT(CodeSalesOrganizationTxt__c) &amp;  PlastubosGroupTxt__c ,
&apos;&apos;))</formula>
    <label>Grupo de Contas</label>
    <type>Text</type>
</CustomField>