force-app/main/default/objects/AccountAreaSales__c/fields/AccountLabelTxt__c.field-meta.xml
<CustomField>
    <fullName>AccountLabelTxt__c</fullName>
    <label>Label da conta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>