force-app/main/default/objects/AccountAreaSales__c/fields/AccountLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountLkp__c</fullName>
    <label>Nome da conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clientes (Nome da conta)</relationshipLabel>
    <relationshipName>AreasDeVendas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>