force-app/main/default/objects/AccountAreaSales__c/fields/AccountNameFml__c.field-meta.xml
<CustomField>
    <fullName>AccountNameFml__c</fullName>
    <formula>AccountLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta</label>
    <type>Text</type>
</CustomField>