force-app/main/default/objects/AccountAreaSales__c/fields/AccountPhoneNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>AccountPhoneNumberNmb__c</fullName>
    <formula>AccountLkp__r.Phone</formula>
    <label>Telefone</label>
    <type>Text</type>
</CustomField>