force-app/main/default/objects/AccountAreaSales__c/fields/AccountTypeFml__c.field-meta.xml
<CustomField>
    <fullName>AccountTypeFml__c</fullName>
    <formula>CASE 
(AccountLkp__r.RecordType.DeveloperName, 
&apos;AccountPartner&apos;,&apos;Parceiro&apos;, 
&apos;CompetitionAccount&apos;,&apos;Cliente da Concorrência&apos;, 
&apos;CampaignGroup&apos;,&apos;Agrupamento de Campanha&apos;, 
&apos;PartnerAccount&apos;,&apos;Representante&apos;, 
&apos;Emissor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Conta</label>
    <type>Text</type>
</CustomField>