force-app/main/default/objects/AccountAreaSales__c/fields/ActivitySectorTxt__c.field-meta.xml
<CustomField>
    <fullName>ActivitySectorTxt__c</fullName>
    <label>Descrição setor atividade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Família produtos 01</fullName>
            </value>
            <value>
                <fullName>Setor Comum</fullName>
            </value>
            <value>
                <fullName>Serviços</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Composto</fullName>
            </value>
            <value>
                <fullName>Construção</fullName>
            </value>
            <value>
                <fullName>Embalagem</fullName>
            </value>
            <value>
                <fullName>Geomecânico</fullName>
            </value>
            <value>
                <fullName>Industria</fullName>
            </value>
            <value>
                <fullName>Item Descontinuado</fullName>
            </value>
            <value>
                <fullName>Infra-Estrutura</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Irrigação</fullName>
            </value>
            <value>
                <fullName>Material Manutenção</fullName>
            </value>
            <value>
                <fullName>Matéria Prima</fullName>
            </value>
            <value>
                <fullName>Predial</fullName>
            </value>
            <value>
                <fullName>Refugo</fullName>
            </value>
            <value>
                <fullName>Sucata</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>