force-app/main/default/objects/AccountAreaSales__c/fields/AmancoGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>AmancoGroupTxt__c</fullName>
    <description>Grupo de contas da Amanco</description>
    <label>Grupo Amanco</label>
    <length>4</length>
    <type>Text</type>
</CustomField>