force-app/main/default/objects/AccountAreaSales__c/fields/BillingCityFml__c.field-meta.xml
<CustomField>
    <fullName>BillingCityFml__c</fullName>
    <formula>AccountLkp__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade</label>
    <type>Text</type>
</CustomField>