force-app/main/default/objects/AccountAreaSales__c/fields/BillingDistrictFml__c.field-meta.xml
<CustomField>
    <fullName>BillingDistrictFml__c</fullName>
    <formula>AccountLkp__r.BillingDistrict__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bairro</label>
    <type>Text</type>
</CustomField>