force-app/main/default/objects/AccountAreaSales__c/fields/BillingStateFml__c.field-meta.xml
<CustomField>
    <fullName>BillingStateFml__c</fullName>
    <formula>AccountLkp__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UF</label>
    <type>Text</type>
</CustomField>