force-app/main/default/objects/AccountAreaSales__c/fields/CampaignActive__c.field-meta.xml
<CustomField>
    <fullName>CampaignActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ativa para Campanha</label>
    <type>Checkbox</type>
</CustomField>