force-app/main/default/objects/AccountAreaSales__c/fields/CampaignGroupLkp__c.field-meta.xml
<CustomField>
    <fullName>CampaignGroupLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agrupamento de Campanha</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agrupamento de Campanha</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>SalesAreas</relationshipName>
    <type>Lookup</type>
</CustomField>