force-app/main/default/objects/AccountAreaSales__c/fields/ChannelLkp__c.field-meta.xml
<CustomField>
    <fullName>ChannelLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal PVC</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipName>AccountAreaSales</relationshipName>
    <type>Lookup</type>
</CustomField>