force-app/main/default/objects/AccountAreaSales__c/fields/ChannelPVCTxt__c.field-meta.xml
<CustomField>
    <fullName>ChannelPVCTxt__c</fullName>
    <label>Cód. Canal PVC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC1</fullName>
            </value>
            <value>
                <fullName>AC2</fullName>
            </value>
            <value>
                <fullName>AGE</fullName>
            </value>
            <value>
                <fullName>AGN</fullName>
            </value>
            <value>
                <fullName>AGS</fullName>
            </value>
            <value>
                <fullName>AV1</fullName>
            </value>
            <value>
                <fullName>AV2</fullName>
            </value>
            <value>
                <fullName>CAB</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>CON</fullName>
            </value>
            <value>
                <fullName>CTB</fullName>
            </value>
            <value>
                <fullName>CTD</fullName>
            </value>
            <value>
                <fullName>DTB</fullName>
            </value>
            <value>
                <fullName>DTR</fullName>
            </value>
            <value>
                <fullName>EMP</fullName>
            </value>
            <value>
                <fullName>EXP</fullName>
            </value>
            <value>
                <fullName>FAB</fullName>
            </value>
            <value>
                <fullName>FGB</fullName>
            </value>
            <value>
                <fullName>GEE</fullName>
            </value>
            <value>
                <fullName>GEN</fullName>
            </value>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>INB</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>MIB</fullName>
            </value>
            <value>
                <fullName>OTB</fullName>
            </value>
            <value>
                <fullName>OTR</fullName>
            </value>
            <value>
                <fullName>PRB</fullName>
            </value>
            <value>
                <fullName>PRT</fullName>
            </value>
            <value>
                <fullName>REV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>