force-app/main/default/objects/AccountAreaSales__c/fields/CNPJTxt__c.field-meta.xml
<CustomField>
    <fullName>CNPJTxt__c</fullName>
    <formula>AccountLkp__r.CNPJTxt__c</formula>
    <label>CNPJ</label>
    <type>Text</type>
</CustomField>