force-app/main/default/objects/AccountAreaSales__c/fields/CodeDistribubutionChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeDistribubutionChannelTxt__c</fullName>
    <label>Canal distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>EX</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>VD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>