force-app/main/default/objects/AccountAreaSales__c/fields/CodeFiscalClassificationTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeFiscalClassificationTxt__c</fullName>
    <label>Classificação fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>