force-app/main/default/objects/AccountAreaSales__c/fields/CodeSalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeSalesOrganizationTxt__c</fullName>
    <label>Organização de vendas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0143</fullName>
            </value>
            <value>
                <fullName>AM01</fullName>
            </value>
            <value>
                <fullName>0099</fullName>
            </value>
            <value>
                <fullName>0141</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>