force-app/main/default/objects/AccountAreaSales__c/fields/CreditLimitFml__c.field-meta.xml
<CustomField>
    <fullName>CreditLimitFml__c</fullName>
    <formula>AccountLkp__r.CreditLimit__c</formula>
    <label>Limite de crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>