force-app/main/default/objects/AccountAreaSales__c/fields/CreditUsedFml__c.field-meta.xml
<CustomField>
    <fullName>CreditUsedFml__c</fullName>
    <formula>AccountLkp__r.UsedCredit__c</formula>
    <label>Crédito Utilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>