force-app/main/default/objects/AccountAreaSales__c/fields/CustomerGroup2Txt__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup2Txt__c</fullName>
    <label>Grupo de clientes 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>