force-app/main/default/objects/AccountAreaSales__c/fields/CustomIDTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIDTxt__c</fullName>
    <description>CONCATENAÇÃO:
Código cliente + Código organização de vendas + Código canal de distribuição + Código setor atividade</description>
    <externalId>true</externalId>
    <inlineHelpText>CONCATENAÇÃO:
Código cliente + Código organização de vendas + Código canal de distribuição + Código setor atividade</inlineHelpText>
    <label>ID customizado</label>
    <length>26</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>