force-app/main/default/objects/AccountAreaSales__c/fields/DescriptionChannelPVCTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionChannelPVCTxt__c</fullName>
    <label>Descrição canal PVC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PR - ATACADOS CONSTRUTORAS 1</fullName>
            </value>
            <value>
                <fullName>PR - ATACADOS CONSTRUTORAS 2</fullName>
            </value>
            <value>
                <fullName>CO - COMPOSTOS ALPHAGARY EXPORTAÇÃO</fullName>
            </value>
            <value>
                <fullName>CO - COMPOSTOS ALPHAGARY NACIONAL</fullName>
            </value>
            <value>
                <fullName>CO - COMPOSTOS ALPHAGARY SUBSIDIÁRIA</fullName>
            </value>
            <value>
                <fullName>PR - ATACADO VAREJOS 1</fullName>
            </value>
            <value>
                <fullName>PR - ATACADO VAREJOS 2</fullName>
            </value>
            <value>
                <fullName>BIDIM - CIA AMBIENTAL</fullName>
            </value>
            <value>
                <fullName>IE - CIA SANEAMENTO PRIVATIZADA</fullName>
            </value>
            <value>
                <fullName>IE - COMPANHIAS DE SANEAMENTO</fullName>
            </value>
            <value>
                <fullName>IE - FABRICANTE CONEXÕES IE</fullName>
            </value>
            <value>
                <fullName>BIDIM - CONSTRUTORA</fullName>
            </value>
            <value>
                <fullName>PR - CONSTRUTORA DIRETA</fullName>
            </value>
            <value>
                <fullName>BIDIM - DISTRIBUIDOR</fullName>
            </value>
            <value>
                <fullName>PR - DISTRIBUIDOR VAREJO</fullName>
            </value>
            <value>
                <fullName>IE - EMPREITEIRAS</fullName>
            </value>
            <value>
                <fullName>PR - EXPORTAÇÃO TERCEIROS</fullName>
            </value>
            <value>
                <fullName>IR - FABRICANTES</fullName>
            </value>
            <value>
                <fullName>FABRICANTES DE GEOSSINTÉTICOS</fullName>
            </value>
            <value>
                <fullName>NT - GEOTEXTIL EXPORTAÇÃO</fullName>
            </value>
            <value>
                <fullName>NT - GEOTEXTIL NACIONAL</fullName>
            </value>
            <value>
                <fullName>NT - GEOTEXTIL SUBSIDIÁRIA</fullName>
            </value>
            <value>
                <fullName>BIDIM - INDÚSTRIA</fullName>
            </value>
            <value>
                <fullName>IR - INDÚSTRIAS (USINAS)</fullName>
            </value>
            <value>
                <fullName>BIDIM - MINERAÇÃO</fullName>
            </value>
            <value>
                <fullName>BIDIM - OUTROS</fullName>
            </value>
            <value>
                <fullName>IR - OUTROS</fullName>
            </value>
            <value>
                <fullName>BIDIM - PRODUTOR RURAL</fullName>
            </value>
            <value>
                <fullName>IR - PRODUTOR RURAL</fullName>
            </value>
            <value>
                <fullName>IE - REVENDA INFRA-ESTRUTURA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>