force-app/main/default/objects/AccountAreaSales__c/fields/DescriptionCustomerGroup3Txt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionCustomerGroup3Txt__c</fullName>
    <label>Descrição grupo de clientes 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Embalagem Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>