force-app/main/default/objects/AccountAreaSales__c/fields/DescriptionExpeditionConditionTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionExpeditionConditionTxt__c</fullName>
    <label>Descrição condição de expedição</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alagoas</fullName>
            </value>
            <value>
                <fullName>Anapolis (Amanco)</fullName>
            </value>
            <value>
                <fullName>Anápolis (Amanco)- I</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>CO/NO - Especial</fullName>
            </value>
            <value>
                <fullName>CO/NO / 0700 - Jlle</fullName>
            </value>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Exportação Amanco</fullName>
            </value>
            <value>
                <fullName>Livre</fullName>
            </value>
            <value>
                <fullName>Mato Grosso</fullName>
            </value>
            <value>
                <fullName>Mato Grosso do Sul</fullName>
            </value>
            <value>
                <fullName>Minas Gerais</fullName>
            </value>
            <value>
                <fullName>Montevideo</fullName>
            </value>
            <value>
                <fullName>Nordeste/0700 - Jlle</fullName>
            </value>
            <value>
                <fullName>Nordeste/Norte 0900</fullName>
            </value>
            <value>
                <fullName>Plas. Suape</fullName>
            </value>
            <value>
                <fullName>Plast. PA Maceió</fullName>
            </value>
            <value>
                <fullName>retirada</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>São Paulo</fullName>
            </value>
            <value>
                <fullName>São Paulo - Centro</fullName>
            </value>
            <value>
                <fullName>São Paulo - Z.Oeste</fullName>
            </value>
            <value>
                <fullName>São Paulo - Z.Sul 1</fullName>
            </value>
            <value>
                <fullName>São Paulo - Z.Sul 2</fullName>
            </value>
            <value>
                <fullName>São Paulo- Z.Leste 1</fullName>
            </value>
            <value>
                <fullName>São Paulo -Z.Leste 2</fullName>
            </value>
            <value>
                <fullName>São Paulo-Z.Norte</fullName>
            </value>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>Sul</fullName>
            </value>
            <value>
                <fullName>Sul do Pará</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>