force-app/main/default/objects/AccountAreaSales__c/fields/DescriptionFullSupplyTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionFullSupplyTxt__c</fullName>
    <label>Descrição fornecimento completo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>