force-app/main/default/objects/AccountAreaSales__c/fields/DescriptionSalesOfficeTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionSalesOfficeTxt__c</fullName>
    <label>Descrição escritório de vendas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agência (Default)</fullName>
            </value>
            <value>
                <fullName>Alphagary</fullName>
            </value>
            <value>
                <fullName>Assistência Técnica</fullName>
            </value>
            <value>
                <fullName>Exportação</fullName>
            </value>
            <value>
                <fullName>Reg Infra Industria</fullName>
            </value>
            <value>
                <fullName>Regional CO/NO</fullName>
            </value>
            <value>
                <fullName>Regional Construtora</fullName>
            </value>
            <value>
                <fullName>Regional Infra</fullName>
            </value>
            <value>
                <fullName>Regional Irriga</fullName>
            </value>
            <value>
                <fullName>Regional MG</fullName>
            </value>
            <value>
                <fullName>Regional Nordeste</fullName>
            </value>
            <value>
                <fullName>Regional RJ/ES</fullName>
            </value>
            <value>
                <fullName>Regional SP Capital</fullName>
            </value>
            <value>
                <fullName>Regional SP Interior</fullName>
            </value>
            <value>
                <fullName>Regional Sul</fullName>
            </value>
            <value>
                <fullName>Venda Direta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>