force-app/main/default/objects/AccountAreaSales__c/fields/DistributionChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannelTxt__c</fullName>
    <label>Descrição canal distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Can.distribuição 01</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Canal Comun</fullName>
            </value>
            <value>
                <fullName>Atendimento Mexichem</fullName>
            </value>
            <value>
                <fullName>Exportação</fullName>
            </value>
            <value>
                <fullName>Repres/Vendedor</fullName>
            </value>
            <value>
                <fullName>Venda Direta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>