force-app/main/default/objects/AccountAreaSales__c/fields/ExpeditionConditionTxt__c.field-meta.xml
<CustomField>
    <fullName>ExpeditionConditionTxt__c</fullName>
    <label>Condição de expedição</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>