force-app/main/default/objects/AccountAreaSales__c/fields/FiscalClassificationTxt__c.field-meta.xml
<CustomField>
    <fullName>FiscalClassificationTxt__c</fullName>
    <label>Descrição classificação fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não sujeito a impst.</fullName>
            </value>
            <value>
                <fullName>Imposto normal</fullName>
            </value>
            <value>
                <fullName>Área Livre Com IPI</fullName>
            </value>
            <value>
                <fullName>ZFM - ICMS e IPI</fullName>
            </value>
            <value>
                <fullName>Clientes exportação</fullName>
            </value>
            <value>
                <fullName>Área Livre Comer. ST</fullName>
            </value>
            <value>
                <fullName>Imposto Futuro</fullName>
            </value>
            <value>
                <fullName>Desc. REIDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>