force-app/main/default/objects/AccountAreaSales__c/fields/FullSupplyTxt__c.field-meta.xml
<CustomField>
    <fullName>FullSupplyTxt__c</fullName>
    <label>Fornecimento completo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>