force-app/main/default/objects/AccountAreaSales__c/fields/GeneralCreditNmb__c.field-meta.xml
<CustomField>
    <fullName>GeneralCreditNmb__c</fullName>
    <description>Total de Créditos gerais disponíveis para o Cliente. (Informação do Financeiro - SAP)</description>
    <label>Crédito Geral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>