force-app/main/default/objects/AccountAreaSales__c/fields/InactiveBln__c.field-meta.xml
<CustomField>
    <fullName>InactiveBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inativo</label>
    <type>Checkbox</type>
</CustomField>