force-app/main/default/objects/AccountAreaSales__c/fields/OwnersManagerFml__c.field-meta.xml
<CustomField>
    <fullName>OwnersManagerFml__c</fullName>
    <formula>SellerLkp__r.SalesOfficeLkp__r.ManagerLkp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerente do escritório de vendas</label>
    <type>Text</type>
</CustomField>