force-app/main/default/objects/AccountAreaSales__c/fields/PlastubosGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>PlastubosGroupTxt__c</fullName>
    <description>Grupo de Contas da Plastubos</description>
    <label>Grupo Plastubos</label>
    <length>4</length>
    <type>Text</type>
</CustomField>