force-app/main/default/objects/AccountAreaSales__c/fields/PostalAddressTxt__c.field-meta.xml
<CustomField>
    <fullName>PostalAddressTxt__c</fullName>
    <formula>AccountLkp__r.BillingPostalCode</formula>
    <label>CEP</label>
    <type>Text</type>
</CustomField>