force-app/main/default/objects/AccountAreaSales__c/fields/PriceCreditNmb__c.field-meta.xml
<CustomField>
    <fullName>PriceCreditNmb__c</fullName>
    <description>Total de Créditos de preço disponíveis para o Cliente. (Informação do Financeiro - SAP)</description>
    <label>Crédito Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>