force-app/main/default/objects/AccountAreaSales__c/fields/ReturnCreditNmb__c.field-meta.xml
<CustomField>
    <fullName>ReturnCreditNmb__c</fullName>
    <description>Total de Créditos de devolução disponíveis para o Cliente. (Informação do Financeiro - SAP)</description>
    <label>Crédito Devolução</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>